# tasks-CXX

./: .gitignore  README.md
Task_0/: CMakeLists.txt
Task_0/Tests/WordCount/: CMakeLists.txt
Task_0/Tests/WordCount/src/: WordCountTest.cpp
Task_0/Tests/output/: output.csv  salinger_jerome_the_catcher_in_the_rye.csv
Task_0/src/: CMakeLists.txt  WordCount.cpp
Task_0/src/include/: WordCount.h
Task_1/: CMakeLists.txt
Task_1/Tests/Game/: CMakeLists.txt  Game.cpp  Graphic.cpp
Task_1/Tests/input/: input.txt  input1.txt  input2.txt
Task_1/src/: CMakeLists.txt  GameOfLife.cpp
Task_1/src/include/: GameOfLife.h
Task_3/: CMakeLists.txt
Task_3/Tests/Huffman/: CMakeLists.txt
Task_3/Tests/Huffman/src/: HuffmanDecode.cpp  HuffmanTest.cpp
Task_3/Tests/output/: salinger_jerome_the_catcher_in_the_rye.txt  salinger_jerome_the_catcher_in_the_rye_tree.txt  simple_test_tree.txt
Task_3/src/: CMakeLists.txt  Huffman.cpp
Task_3/src/include/: Huffman.h
class/: 03_10_2019.cpp
tutorial/SFML/: CMakeLists.txt
tutorial/SFML/Simple_figures/: CMakeLists.txt  main.cpp
